--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
     "express": "^4.18.2",
+    "flowbite": "^3.1.2",
+    "phosphor-icons": "^1.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
