--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
+    "aos": "^2.3.4",
     "express": "^4.18.2",
     "flowbite": "^3.1.2",
     "phosphor-icons": "^1.4.2",
