--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "aos": "^2.3.4",
     "express": "^4.18.2",
     "flowbite": "^3.1.2",
+    "laravel-echo": "^2.1.5",
     "phosphor-icons": "^1.4.2",
+    "pusher-js": "^7.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
